# vmm

./: Cargo.toml  Makefile  README.md  build-libkrun.sh  build.rs  build.sh
.github/workflows/: ci.yml
src/: main.rs
src/cli/: mod.rs
src/docker/: image.rs  mod.rs  shortnames.rs
src/storage/: mod.rs  paths.rs  state.rs
src/vm/: disk.rs  kernel.rs  krun_ffi.rs  mod.rs  network.rs  runner.rs  setup.rs
